
- #10598, #10616: fix an exponential blow-up when typechecking nested module
  types
  (Florian Angeletti, report and review by Stephen Dolan)

- #10559: Evaluate signature substitutions lazily
  (Stephen Dolan, review by Leo White)

- #8776, #10624: Fix compilation time regression introduced in 4.08
  (Nicolás Ojeda Bär, fix by Leo White, report by Alain Frisch, review by Thomas
  Refis)

### Build system:

### Bug fixes:

- #10473: Add CFI directives to RISC-V runtime and asmcomp.
  This allows stacktraces to work in gdb through C and OCaml calls.
  (Edwin Török, review by Nicolás Ojeda Bär and Xavier Leroy)

- #10461, #10498: `caml_send*` helper functions take derived pointers
  as arguments.  Those must be declared with type Addr instead of Val.
  Moreover, poll point insertion must be disabled for `caml_send*`,
  otherwise the derived pointer is live across a poll point.
  (Vincent Laviron and Xavier Leroy, review by Xavier Leroy and Sadiq Jaffer)

- #10539: Field kinds should be kept when copying types
  Losing the sharing meant that one could desynchronize them between several
  occurrences of self, allowing a method to be both public and hidden,
  which broke type soundness.
  (Jacques Garrigue, review by Leo White)

- #10542: Fix detection of immediate64 types through unboxed types.
  (Leo White, review by Stephen Dolan and Gabriel Scherer)

- #10590: Some typechecker optimisations
  (Stephen Dolan, review by Gabriel Scherer and Leo White)

- #10603, #10611: Fix if condition marked as inconstant in flambda
  (Vincent Laviron and Pierre Chambart, report by Marcello Seri)

OCaml 4.13.0
-------------

### Language features:

- #10039: Safepoints
  Add poll points to native generated code. These are effectively
  zero-sized allocations and fix some signal and remembered set
  issues. Also multicore prerequisite.
  (Sadiq Jaffer, Stephen Dolan, Damien Doligez, Xavier Leroy,
   Anmol Sahoo, Mark Shinwell, review by Damien Doligez, Xavier Leroy,